# swrloader-extendedstory

./: Cargo.toml
.cargo/: config
.github/workflows/: main.yml
src/: debug.rs  hook.rs  lib.rs  select_scenario.rs  select_scenarios.rs  survivals.rs  swr.rs
src/select_scenarios/: select_scenario.rs  text_texture.rs  texture_renderer.rs
src/survivals/: scenario_txt_builder.rs  story_csv_builder.rs  survival_manager.rs  tamperer.rs
src/titles/: title.rs
