[package]
name = 'extended_story'
version = '0.3.0'
authors = ['progre <djyayutto@gmail.com>']
edition = '2018'

[lib]
crate-type = ['dylib']
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies]
encoding_rs = '0.8'

[dependencies.regex]
version = '1'
default-features = false
features = ['std']

[dependencies.winapi]
version = '0.3'
features = [
    'd3d9',
    'debugapi',
    'memoryapi',
    'processthreadsapi',
]
